# inst_algo

./: README.md  ex4v3.cpp
all_fail_ex2/KT3_2/: CMakeLists.txt  main.cpp
all_fail_ex2/KT3_ex2/: CMakeLists.txt
all_fail_ex2/algo_KT3_ex2/: CMakeLists.txt  main.cpp  task2-map1.txt
all_fail_ex2/algo_ex2_var3/: CMakeLists.txt  main.cpp
ex1/: CMakeLists.txt  input.txt  main.cpp
ex2/: CMakeLists.txt  field.cpp  field.h  input0.txt  input1.txt  input2.txt  input4.txt  line.cpp  line.h  main.cpp  point.cpp  point.h  portal.h  room.cpp  room.h
ex3/: CMakeLists.txt  input.txt  main.cpp
ex4(not working)/: CMakeLists.txt  input.txt  main.cpp  task4-test1.txt
ex4v2/: CMakeLists.txt  main.cpp  readme  task4-test2.txt
